--- a/.github/workflows/branches.yaml
+++ b/.github/workflows/branches.yaml
@@ -17,6 +17,6 @@ jobs:
           go-version: 1.16
       - uses: goreleaser/goreleaser-action@v2
         with:
-          args: release --rm-dist --skip-publish --snapshot
+          args: release --rm-dist --snapshot
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
