--- a/.github/workflows/branches.yaml
+++ b/.github/workflows/branches.yaml
@@ -14,7 +14,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@v2
         with:
-          go-version: latest
+          go-version: '^1\.'
       - uses: goreleaser/goreleaser-action@v2
         with:
           args: release --rm-dist --snapshot
