--- a/.github/workflows/tags.yaml
+++ b/.github/workflows/tags.yaml
@@ -14,7 +14,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@v2
         with:
-          go-version: '^1\.'
+          go-version: '1.17'
       - uses: goreleaser/goreleaser-action@v2
         with:
           args: release --rm-dist
